# dependabot-uv-lock-range-bug

./: main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
tests/: import_test.py
