[project]
name = "dependabot-uv-bug-11896"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-storages[google]>=1.14.5",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
